force-app/main/default/objects/Subscription_Override_Recipient__c/Subscription_Override_Recipient__c.object-meta.xml
<CustomObject>
    <description>This is a related list to HL Subscription to store the optional override recipients.</description>
    <label>Subscription Override Recipient</label>
    <nameField>
        <displayFormat>SOR-{00000000}</displayFormat>
        <label>Subscription Override Recipient Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscription Override Recipients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>