force-app/main/default/objects/Subscription_Override_Recipient__c/fields/Override_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Override_Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is an optional override recipient.</description>
    <inlineHelpText>This is an optional override recipient.</inlineHelpText>
    <label>Override Recipient</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Houlihan Employee</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Subscription Override Recipients</relationshipLabel>
    <relationshipName>Subscription_Override_Recipients</relationshipName>
    <type>Lookup</type>
</CustomField>