force-app/main/default/objects/Subscription_Override_Recipient__c/fields/Override_Recipient_Email__c.field-meta.xml
<CustomField>
    <fullName>Override_Recipient_Email__c</fullName>
    <formula>Override_Recipient__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Override Recipient Email</label>
    <type>Text</type>
</CustomField>