force-app/main/default/objects/Subscription_Override_Recipient__c/fields/Override_Recipient_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Override_Recipient_Full_Name__c</fullName>
    <formula>Override_Recipient__r.Contact_Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Override Recipient Full Name</label>
    <type>Text</type>
</CustomField>