force-app/main/default/objects/Subscription_Override_Recipient__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the lookup to the corresponding Hl Subscription record.</description>
    <inlineHelpText>This is the lookup to the corresponding Hl Subscription record.</inlineHelpText>
    <label>Subscription</label>
    <referenceTo>HL_Subscription__c</referenceTo>
    <relationshipLabel>Override Recipients</relationshipLabel>
    <relationshipName>Subscription_Override_Recipients</relationshipName>
    <type>Lookup</type>
</CustomField>